--- a/src/main/webapp/i18n/he/error.json
+++ b/src/main/webapp/i18n/he/error.json
@@ -1,6 +1,6 @@
 {
     "errors": {
-        "title": "Error page!",
-        "403": "You are not authorized to access the page."
+        "title": "שגיאה!",
+        "403": "אינך מורשה לגשת לדף זה."
     }
 }
