no more gifts modal added

--- a/src/main/webapp/i18n/he/organization.json
+++ b/src/main/webapp/i18n/he/organization.json
@@ -15,7 +15,7 @@
             "name": "שם",
             "dateAdded": "זמן הוספה",
             "password": "סיסמה",
-            "pocEmail": "איש קשר",
+            "pocEmail": "כתובת דואר אלקטרוני של איש קשר",
             "metadata": "נתונים נוספים"
         }
     }
