--- a/src/main/webapp/i18n/he/company.json
+++ b/src/main/webapp/i18n/he/company.json
@@ -15,7 +15,7 @@
             "name": "שם",
             "dateAdded": "תאריך הוספה",
             "password": "סיסמה",
-            "pocEmail": "איש קשר",
+            "pocEmail": "כתובת דואר אלקטרוני של איש קשר",
             "metadata": "מידע נוסף",
             "description": "תיאור",
             "website": "אתר אינטרנט"
