--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -13,6 +13,6 @@
             "contact": "contact @java_hipster on Twitter"
         },
         "like": "If you like JHipster, don't forget to give us a star on",
-        "github": "Github"
+        "github": "BioCatch"
     }
 }
