--- a/src/main/webapp/i18n/he/kid.json
+++ b/src/main/webapp/i18n/he/kid.json
@@ -4,7 +4,7 @@
             "home": {
                 "title": "ילדים",
                 "createLabel": "הוסף ילד",
-                "createOrEditLabel": "הוסף או עדכן ילד"
+                "createOrEditLabel": "אנא הזן את שמך"
             },
             "delete": {
                 "question": "האם אתה בטוח שאתה רוצה להסיר את הילד {{ id }}?"
